--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 <h1>Hello World</h1>
 <p>Welcome to my webpage.</p>
+<img src="8995703_orig.jpg" alt="a title for your image" />
 </body>
 </html>
 
