--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Hello World</h1>
-<p>Welcome to my webpage.</p>
+<p class="fancy">Welcome to my webpage.</p>
 <img src="8995703_orig.jpg" alt="Globe" />
 </body>
 </html>
