--- a/list.html
+++ b/list.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 <ul>
-<li>this is</li>
-<li>an unordered list</li>
-<li>with four</li>
-<li>items</li>
+<li>Climate Change</li>
+<li>The World Today</li>
+<li>The World History</li>
+<li>Thing You Can do At Home to Help</li>
 </ul>
 <a href="index.html">This is a link to home</a>
 </body>
