--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <h1>Hello World</h1>
 <p class="fancy">Welcome to my webpage.</p>
 <img src="8995703_orig.jpg" alt="Globe" />
+<a href="list.html">List</a>
 </body>
 </html>
 
