--- a/list.html
+++ b/list.html
@@ -12,5 +12,6 @@
 <li>Thing You Can do At Home to Help</li>
 </ul>
 <a href="index.html">This is a link to home</a>
+<a href="video.html">This is a link to a Climate Change video</a>
 </body>
 </html>
