--- a/list.html
+++ b/list.html
@@ -6,12 +6,12 @@
 </head>
 <body>
 <ul>
-<li>Climate Change</li>
+<li><a href="video.html">Climate Change Explained</li>
 <li>The World Today</li>
 <li>The World History</li>
 <li>Thing You Can do At Home to Help</li>
 </ul>
-<a href="index.html">This is a link to home</a>
+<a href="index.html">Homepage</a>
 <a href="video.html">This is a link to a Climate Change video</a>
 </body>
 </html>
