--- a/list.html
+++ b/list.html
@@ -6,14 +6,12 @@
 </head>
 <body>
 <ul>
-<li><a href="video.html">Climate Change Explained</li>
-</ul>
-<ul>
+<li>Climate Change Explained</li>
 <li>The World Today</li>
 <li>The World History</li>
 <li>Thing You Can do At Home to Help</li>
 </ul>
 <a href="index.html">Homepage</a>
-<a href="video.html">This is a link to a Climate Change video</a>
+<a href="video.html">This is a link to a Climate Change Explanation video</a>
 </body>
 </html>
