--- a/list.html
+++ b/list.html
@@ -13,5 +13,6 @@
 </ul>
 <a href="index.html">Homepage</a>
 <a href="video.html">This is a link to a Climate Change Explanation video</a>
+<img src="proxy-based_temperature_reconstruction.png" alt="Table of Earth's Temperature" />
 </body>
 </html>
