--- a/video.html
+++ b/video.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Climate Change Video</h1>
-<p class="fancy">Video by Bill Nye for National Geographic.</p>
+<p class="colour">Video by Bill Nye for National Geographic.</p>
 <iframe width="727" height="409" src="https://www.youtube.com/embed/EtW2rrLHs08" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <a href="list.html">List</a>
 <a href="index.html">Home</a>
