--- a/list.html
+++ b/list.html
@@ -14,5 +14,6 @@
 <a href="index.html">Homepage</a>
 <a href="video.html">This is a link to a Climate Change Explanation video</a>
 <img src="proxy-based_temperature_reconstruction.png" alt="Table of Earth's Temperature" />
+<img src="sea-surface-temp-download2-2016.png" alt="Change in World Sea'sTemperature" />
 </body>
 </html>
