--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Hello World</h1>
-<p class="fancy">Welcome to my webpage.</p>
+<p class="fancy">Welcome to my webpage on climate change and global warming. This is a small informative site with intersting inforamtion about the topic.</p>
 <img src="8995703_orig.jpg" alt="Globe" />
 <a href="list.html">List</a>
 </body>
