--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
+body {
+  background-color: lightblue;
+}
 <meta charset="utf-8">
 <title>Cmpt 104</title>
 <link rel="stylesheet" href="mystyle.css">
