--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!doctype html>
 <html lang="en">
 <head>
+<style>
 body {
   background-color: lightblue;
 }
+</style>
 <meta charset="utf-8">
 <title>Cmpt 104</title>
 <link rel="stylesheet" href="mystyle.css">
