--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html lang="en">
 <head>
 <style>
-body {
-  background-color: lightblue;
-}
+<link rel="stylesheet" href="mystyle.css">
 </style>
 <meta charset="utf-8">
 <title>Cmpt 104</title>
