--- a/video.html
+++ b/video.html
@@ -9,6 +9,23 @@
 <h2>Climate Change Video</h1>
 <p class="colour">Video by Bill Nye for National Geographic.</p>
 <iframe width="727" height="409" src="https://www.youtube.com/embed/EtW2rrLHs08" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<table style="width:100%">
+  <tr>
+    <th>Top Site to Check out on Climate Change actionable tips</th>
+  </tr>
+  <tr>
+    <td>Website Name</td>
+    <td>Link</td>
+  </tr>
+  <tr>
+    <td>David Suzuki</td>
+    <td>https://davidsuzuki.org/what-you-can-do/top-10-ways-can-stop-climate-change/</td>
+  </tr>
+  <tr>
+    <td>World Wildlife Fund</td>
+    <td>https://www.worldwildlife.org/pages/what-you-can-do-to-fight-climate-change</td>
+  </tr>
+</table>
 <a href="list.html">List</a>
 <a href="index.html">Home</a>
 </body>
